Commit al master del blogpost en su version mas reciente

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
+
 <body>
-    <h1>Hello</h1>
-    <p>World</p>
+    <div id="container">
+        <div id="post">
+            <h1>
+                Este es el titulo atractivo e interesante
+            </h1>
+            <p>
+                Y este es el parrafo interesante
+            </p>
+        </div>
+    </div>
 </body>
+
 </html>
